Fix list links spacing and duplicate characters in word issue

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -214,7 +214,9 @@ ul.list-link-content {
   padding-left: 0;
   list-style-type: none;
   display: flex;
+  flex-flow: row wrap;
   li a {
+    white-space: nowrap;
     font-size: 2rem;
     padding: 1rem;
   }
